content: align human-centered sections and embed Ma Boheme video

--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
                                 <Terminal className="text-cyan-400 mb-4" size={36} />
                                 <h4 className="text-xl font-bold text-white mb-2">L'imagination véritable</h4>
                                 <p className="text-gray-300 text-sm">
-                                    L'IA recombine ce qui existe déjà. L'humain invente ce qui n'a jamais existé. L'IA optimise, l'humain révolutionne. Les ruptures créatives et les visions inédites restent notre domaine.
+                                    L'IA recombine ce qui existe déjà. L'humain invente ce qui n'a jamais existé. L'IA optimise, l'humain révolutionne. Les grandes ruptures créatives, les idées vraiment neuves, les visions qui changent le monde : c'est notre domaine.
                                 </p>
                             </div>
                         </Card>
@@ -960,7 +960,7 @@
                                 <User className="text-pink-400 mb-4" size={36} />
                                 <h4 className="text-xl font-bold text-white mb-2">L'émotion et l'empathie</h4>
                                 <p className="text-gray-300 text-sm">
-                                    Une IA peut détecter des patterns émotionnels, mais elle ne ressent rien. L'empathie authentique, la capacité à partager joie et peine, et la profondeur du lien humain restent irremplaçables.
+                                    Une IA peut détecter des patterns dans les expressions faciales, mais elle ne ressent rien. L'empathie véritable, la capacité à se mettre à la place d'autrui, à partager une joie ou une peine, reste profondément humaine. Nos connexions émotionnelles sont irremplaçables.
                                 </p>
                             </div>
                         </Card>
@@ -970,7 +970,7 @@
                                 <ShieldCheck className="text-yellow-400 mb-4" size={36} />
                                 <h4 className="text-xl font-bold text-white mb-2">Le jugement éthique</h4>
                                 <p className="text-gray-300 text-sm">
-                                    Face à un dilemme moral, l'IA applique des règles. L'humain évalue les valeurs en jeu, le contexte, les nuances et les conséquences à long terme. La responsabilité éthique ne se délègue pas.
+                                    Face à un dilemme moral, l'IA applique des règles. L'humain réfléchit aux valeurs en jeu. Nous considérons le contexte, les nuances, les conséquences à long terme. La responsabilité éthique ne peut être déléguée à un algorithme.
                                 </p>
                             </div>
                         </Card>
@@ -980,7 +980,7 @@
                                 <Globe className="text-green-400 mb-4" size={36} />
                                 <h4 className="text-xl font-bold text-white mb-2">La vision stratégique</h4>
                                 <p className="text-gray-300 text-sm">
-                                    L'IA excelle dans la tactique et l'optimisation d'objectifs donnés. Définir le cap, anticiper les transformations sociétales et choisir les finalités reste notre rôle de pilote.
+                                    L'IA excelle dans la tactique, dans l'optimisation d'un objectif donné. Mais définir quel objectif poursuivre, comprendre les enjeux à long terme, anticiper les transformations sociétales : c'est notre rôle de pilote.
                                 </p>
                             </div>
                         </Card>
@@ -1180,31 +1180,57 @@
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                         Ma Bohème: quand l'humain dépasse la machine
                     </h2>
-                    <p className="text-center text-gray-300 max-w-4xl mx-auto mb-10">
-                        L'IA peut imiter des styles. Elle ne vit pas l'instant, l'énergie de scène, la vulnérabilité du live.
+                    <h3 className="text-xl md:text-2xl font-bold text-center text-blue-200 mb-4">
+                        La voix humaine comme contre-point à l'IA
+                    </h3>
+                    <p className="text-center text-gray-300 max-w-5xl mx-auto mb-4">
+                        Permettez-moi de vous raconter une petite histoire personnelle. J'ai travaillé sur une performance où je reprends "Ma Bohème" de Rimbaud, non pas en le récitant de manière classique, mais en utilisant le beatbox. Ma voix crée tous les instruments, toutes les rythmiques, toutes les textures sonores.
                     </p>
+                    <p className="text-center text-gray-300 max-w-5xl mx-auto mb-8">
+                        Pourquoi est-ce pertinent dans une conférence sur l'intelligence artificielle ? Parce que cela illustre parfaitement ce que la machine peut imiter mais jamais vraiment être : l'expression artistique spontanée, l'émotion brute, l'imperfection magnifique de la performance live.
+                    </p>
+
+                    <div className="max-w-4xl mx-auto mb-10 rounded-2xl overflow-hidden border border-white/10 shadow-2xl">
+                        <div className="aspect-video">
+                            <iframe
+                                className="w-full h-full"
+                                src="https://www.youtube.com/embed/SYDzRzrB_AY"
+                                title="Ma Bohème - Performance beatbox"
+                                loading="lazy"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowFullScreen
+                            ></iframe>
+                        </div>
+                    </div>
+
                     <div className="grid md:grid-cols-2 gap-8">
                         <Card className="border-cyan-500/30">
                             <h3 className="text-2xl font-bold text-white mb-4">Ce que l'IA peut faire</h3>
                             <ul className="space-y-2 text-gray-300 text-sm">
-                                <li>• Générer des versions instrumentales très propres</li>
-                                <li>• Produire des variations infinies</li>
-                                <li>• Reproduire des structures rythmiques</li>
-                                <li>• Imiter des styles existants</li>
+                                <li>• Générer une version instrumentale parfaite</li>
+                                <li>• Créer des variations infinies d'un morceau</li>
+                                <li>• Analyser les structures rythmiques complexes</li>
+                                <li>• Reproduire un style musical avec précision</li>
                             </ul>
                         </Card>
                         <Card className="border-pink-500/30" delay={0.1}>
-                            <h3 className="text-2xl font-bold text-white mb-4">Ce que l'humain apporte</h3>
+                            <h3 className="text-2xl font-bold text-white mb-4">Ce que seul l'humain apporte</h3>
                             <ul className="space-y-2 text-gray-300 text-sm">
-                                <li>• L'émotion authentique de l'interprétation</li>
+                                <li>• L'émotion authentique dans l'interprétation</li>
                                 <li>• L'imprévisibilité créative de l'instant</li>
-                                <li>• La connexion avec le public</li>
-                                <li>• Le sens, le risque, la présence</li>
+                                <li>• La connexion énergétique avec le public</li>
+                                <li>• Le frisson de la vulnérabilité sur scène</li>
                             </ul>
                         </Card>
                     </div>
                     <p className="text-center text-xl text-pink-200 mt-10 italic">
                         "L'humain peut faire ce que l'IA imite."
+                    </p>
+                    <p className="text-center text-gray-300 max-w-5xl mx-auto mt-6">
+                        Quand je fais du beatbox, chaque performance est unique. Les micro-variations, les réponses aux réactions du public, l'énergie du moment : tout cela crée quelque chose d'irréductiblement vivant. L'IA peut créer de la musique techniquement impressionnante, mais elle ne vit pas l'expérience de la création.
+                    </p>
+                    <p className="text-center text-gray-300 max-w-5xl mx-auto mt-4">
+                        C'est un rappel puissant que, dans un monde de plus en plus automatisé, notre humanité – avec ses imperfections, ses émotions, sa spontanéité – devient notre plus grande force distinctive. Ne cherchons pas à devenir des machines plus efficaces. Cultivons ce qui fait de nous des humains irremplaçables.
                     </p>
                 </div>
             </Section>
