--- a/index.html
+++ b/index.html
@@ -1240,41 +1240,69 @@
             <Section className="bg-black">
                 <div className="max-w-6xl w-full">
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
-                        Chapitre 3: Réguler sans freiner
+                        Réguler sans freiner : l'équilibre délicat
                     </h2>
                     <p className="text-center text-gray-300 max-w-4xl mx-auto mb-10">
-                        La bonne régulation protège les citoyens sans bloquer l'innovation: des feux rouges, pas des chaînes.
+                        La régulation de l'intelligence artificielle est l'un des défis les plus complexes de notre époque. Comment protéger les citoyens des dérives potentielles sans étouffer l'innovation ? Comment établir des règles dans un domaine qui évolue plus vite que les cycles législatifs ? Comment harmoniser les approches entre pays aux valeurs parfois contradictoires ?
                     </p>
 
-                    <div className="grid md:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
+                    <h3 className="text-2xl font-bold text-white mb-4">Les enjeux de la régulation</h3>
+                    <div className="grid md:grid-cols-2 lg:grid-cols-4 gap-4 mb-10">
                         <Card className="p-4">
-                            <h3 className="font-bold text-white mb-2">Données</h3>
-                            <p className="text-gray-400 text-sm">Consentement, vie privée, transparence d'usage.</p>
+                            <h3 className="font-bold text-white mb-2">Protection des données personnelles</h3>
+                            <p className="text-gray-400 text-sm">
+                                Empêcher l'utilisation abusive d'informations privées, garantir le consentement éclairé, assurer la transparence sur l'utilisation des données d'entraînement.
+                            </p>
                         </Card>
                         <Card className="p-4" delay={0.05}>
-                            <h3 className="font-bold text-white mb-2">Biais</h3>
-                            <p className="text-gray-400 text-sm">Auditer, corriger, limiter les discriminations.</p>
+                            <h3 className="font-bold text-white mb-2">Prévention des biais et discriminations</h3>
+                            <p className="text-gray-400 text-sm">
+                                Obliger les créateurs d'IA à auditer leurs systèmes, détecter et corriger les biais discriminatoires, assurer l'équité des décisions automatisées.
+                            </p>
                         </Card>
                         <Card className="p-4" delay={0.1}>
-                            <h3 className="font-bold text-white mb-2">Responsabilité</h3>
-                            <p className="text-gray-400 text-sm">Savoir qui répond en cas d'erreur critique.</p>
+                            <h3 className="font-bold text-white mb-2">Responsabilité et traçabilité</h3>
+                            <p className="text-gray-400 text-sm">
+                                Établir qui est responsable en cas d'erreur de l'IA, garantir la capacité d'auditer les décisions, maintenir un contrôle humain sur les décisions critiques.
+                            </p>
                         </Card>
                         <Card className="p-4" delay={0.15}>
-                            <h3 className="font-bold text-white mb-2">Sécurité</h3>
-                            <p className="text-gray-400 text-sm">Prévenir manipulations et attaques malveillantes.</p>
+                            <h3 className="font-bold text-white mb-2">Sécurité et robustesse</h3>
+                            <p className="text-gray-400 text-sm">
+                                Prévenir les manipulations malveillantes, tester la résilience des systèmes, établir des normes de sécurité minimales.
+                            </p>
                         </Card>
                     </div>
 
                     <div className="grid md:grid-cols-2 gap-6">
                         <Card className="border-orange-500/30">
-                            <h3 className="text-xl font-bold text-white mb-2">Risque de sur-régulation</h3>
-                            <p className="text-gray-400 text-sm">Trop de complexité peut bloquer startups, chercheurs et innovation locale.</p>
+                            <h3 className="text-xl font-bold text-white mb-2">Le risque de la sur-régulation</h3>
+                            <p className="text-gray-400 text-sm leading-relaxed">
+                                Des règles trop strictes, trop complexes ou trop rigides peuvent étouffer l'innovation. Les startups et les chercheurs ont besoin d'espace pour expérimenter, échouer, apprendre. Une régulation excessive avantage les géants technologiques qui ont les moyens de s'y conformer, au détriment des petits acteurs innovants.
+                            </p>
                         </Card>
                         <Card className="border-red-500/30" delay={0.1}>
-                            <h3 className="text-xl font-bold text-white mb-2">Risque de sous-régulation</h3>
-                            <p className="text-gray-400 text-sm">Sans garde-fous: surveillance, manipulations, discriminations et perte de confiance.</p>
+                            <h3 className="text-xl font-bold text-white mb-2">Le danger de la sous-régulation</h3>
+                            <p className="text-gray-400 text-sm leading-relaxed">
+                                À l'inverse, un "far west" numérique sans garde-fous expose les citoyens à des risques majeurs : surveillance de masse, manipulation, discrimination algorithmique, perte de contrôle sur les données personnelles. Le marché seul ne garantit pas l'éthique.
+                            </p>
                         </Card>
                     </div>
+
+                    <Card className="mt-8 border-blue-500/30">
+                        <p className="text-blue-200 text-xl italic mb-3">
+                            "Mieux vaut des feux rouges que des chaînes."
+                        </p>
+                        <p className="text-gray-300 text-sm leading-relaxed">
+                            La bonne régulation n'est pas celle qui interdit, mais celle qui guide. Des feux de signalisation permettent une circulation fluide et sûre. Des chaînes immobilisent complètement. L'objectif est de créer un cadre qui protège sans paralyser, qui responsabilise sans écraser, qui oriente sans dicter.
+                        </p>
+                    </Card>
+
+                    <Card className="mt-6 border-purple-500/30" delay={0.1}>
+                        <p className="text-gray-200 text-sm leading-relaxed">
+                            <strong>Question ouverte :</strong> Peut-on réguler efficacement sans ralentir l'innovation ? C'est le grand défi de nos démocraties. La réponse nécessite un dialogue constant entre législateurs, technologues, citoyens et éthiciens. Personne ne détient la vérité absolue, mais ensemble, nous pouvons construire un cadre juste et efficace.
+                        </p>
+                    </Card>
                 </div>
             </Section>
         );
